--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "dictadmin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "latest"
-  },
-  "devDependencies": {
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react-swc": "^3.3.2"
-  }
+	"name": "dictadmin",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "latest"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"vite": "^4.4.5",
+		"eslint": "^8.45.0",
+		"standard": "^17.1.0"
+	},
+	"eslintConfig": {
+	"extends": "./node_modules/standard/eslintrc.json",
+	"rules": {
+		"semi": [ 2, "always" ],
+		"indent": [ 2, "tab" ],
+		"react/jsx-indent": [2, "tab"],
+		"no-tabs": 0,
+		"curly": [2, "multi"]
+	}
+}
 }
