--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"indent": [ 2, "tab" ],
 		"react/jsx-indent": [2, "tab"],
 		"no-tabs": 0,
-		"curly": [2, "multi"]
+		"curly": [2, "multi"],
+		"react/jsx-indent-props": [2, "tab"],
+		"no-unused-vars": "warn"
 	}
 }
 }
