--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-	"name": "dictadmin",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
-
-	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "latest"
-	},
-	"devDependencies": {
-		"@vitejs/plugin-react-swc": "^3.3.2",
-		"vite": "^4.4.5",
-		"eslint": "^8.45.0",
-		"standard": "^17.1.0"
-	},
-	"eslintConfig": {
-	"extends": "./node_modules/standard/eslintrc.json",
-	"rules": {
-		"semi": [ 2, "always" ],
-		"indent": [ 2, "tab" ],
-		"react/jsx-indent": [2, "tab"],
-		"no-tabs": 0,
-		"curly": [2, "multi"],
-		"react/jsx-indent-props": [2, "tab"],
-		"no-unused-vars": "warn"
-	}
-}
+  "name": "dictadmin",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.19.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.54.0",
+    "standard": "^17.1.0",
+    "vite": "^5.0.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "semi": [2, "always"],
+      "indent": [2, "tab"],
+      "react/jsx-indent": [2, "tab"],
+      "no-tabs": 0,
+      "curly": [2, "multi"],
+      "react/jsx-indent-props": [2, "tab"],
+      "no-unused-vars": "warn"
+    }
+  }
 }
